@@ -1,3 +1,7 @@
+2000-09-24  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Check for dying in 'set_properties()'.
+
 2000-09-18  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* actors.cc (Actor): Trying to speed up followers.
